src/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: detector-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #ingress.kubernetes.io/rewrite-target: /
    #ingress.bluemix.net/rewrite-path: "serviceName=app-service rewrite=/"
spec:
  rules:
  - http:
      paths:
      - path: /detector/
        backend:
          serviceName: my-detector
          servicePort: 8888
